feat: lint and format
